--- a/JavaScripts-Aulas/Aula01/index.html
+++ b/JavaScripts-Aulas/Aula01/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira aula</title>
+
 </head>
 <body>
-    <h1>Learning JavaScript</h1>
-    
+    <h1>Learning JavaScript =)</h1>
+    <h2>Como adicionar o JavaScript</h2>
+    <script src="app.js"></script>
 </body>
 </html>
